src/styles/components/header.scss
// Desktop header styling

.header-desktop {
  align-items: center;
  box-sizing: border-box;
  color: $color-white;
  display: flex;
  font-family: $font-face-body;
  font-size: $font-size-base;
  justify-content: space-between;
  padding: $m-base $m-lg;
  position: fixed;
  transition: background-color $transition-duration $transition-function;
  width: 100%;

  &.-colored {
    background-color: $color-primary;
  }

  &__logo {
    height: $icon-size-lg;
  }

  &__nav {
    display: flex;
    justify-content: space-around;
    width: 60%;
  }

  &__link {
    color: $color-white;
    text-decoration: none;
  }

  &__link:visited {
    color: $color-white;
  }
}

// Mobile header styling

.header-mobile {
  align-items: center;
  background-color: $color-white;
  box-sizing: border-box;
  color: $color-white;
  display: flex;
  flex-direction: column;
  font-family: $font-face-body;
  font-size: $font-size-base;
  font-weight: $font-weight-bold;
  justify-content: space-between;
  padding: $m-base;
  position: sticky;
  top: 0;
  width: 100%;

  &__logo,
  &__hamburger-icon {
    height: $icon-size-base;

    &.-light {
      display: none;
    }
  }

  &__social-icon {
    height: $icon-size-lg;
  }

  &__top-bar {
    align-items: center;
    display: flex;
    justify-content: space-between;

    overscroll-behavior: contain;
    width: 100%;
  }

  &__menu {
    display: none;
  }

  &.-hamburger-open {
    background: $color-primary url(/images/header-background.png) no-repeat center;
    background-size: cover;
    height: 100vh;
    margin: 0;
    padding: $m-base;
    width: 100vw;
    z-index: $z-higher;

    .header-mobile {
      &__logo {
        &.-light {
          display: block;
        }

        &.-dark {
          display: none;
        }
      }

      &__menu {
        align-items: center;
        display: flex;
        flex-direction: column;
        flex-grow: 1;
        justify-content: space-evenly;
        width: 100%;
      }

      &__nav {
        display: flex;
        flex-direction: column;
        font-size: $font-size-xl;
        gap: $m-base;
        text-align: center;
      }

      &__link {
        color: $color-white;
        text-decoration: none;
      }

      &__link:visited {
        color: $color-white;
      }

      &__contact-button {
        background-color: transparent;
        border: 2px solid $color-white;
        border-radius: $border-radius-sm;
        color: $color-white;
        font-weight: $font-weight-bold;
        padding: $m-sm;
      }

      &__socials {
        display: flex;
        gap: $m-base;
      }
    }
  }

  @media only screen and (min-width: map-get($grid-breakpoints, md)) {
    &__logo,
    &__hamburger-icon {
      height: $icon-size-lg;
    }

    &__social-icon {
      height: $icon-size-xl;
    }

    &.-hamburger-open {
      .header-mobile {
        &__nav {
          font-size: $font-size-2xl;
        }

        &__contact-button {
          font-size: $font-size-xl;
        }
      }
    }
  }
}

